--- a/src/main.css
+++ b/src/main.css
@@ -4,19 +4,32 @@
 
 #container {
   position: relative;
-  padding-left: 40px;
+  padding-right: 0;
   line-height: 20px;
+}
+
+#outer {
+  position: relative;
+  padding-left: 0;
+  line-height: 20px;
+}
+
+#error {
+  position: absolute;
+  left: 5px;
+  display: none;
 }
 
 #tick {
   position: absolute;
   left: 20px;
-  top: 15px;
+  top: 85px;
   color: teal;
 }
 
 code {
   width: 60%;
+  padding-left: 20px;
   float: left;
 }
 
