--- a/src/main.css
+++ b/src/main.css
@@ -1,18 +1,25 @@
 #main {
-  margin-left: 50px;
+  margin: 20px 50px;
 }
 
 #container {
   position: relative;
-  padding-right: 0;
   line-height: 20px;
 }
 
-#outer {
-  position: relative;
-  padding-left: 0;
-  line-height: 20px;
+.language-answer {
+  padding: 0px;
 }
+
+.language-answer .x {
+  margin: 7px 5px;
+  color: red;
+}
+.language-answer .o {
+  margin: 5px;
+  color: green;
+}
+
 
 #error {
   position: absolute;
@@ -22,21 +29,27 @@
 
 #tick {
   position: absolute;
-  left: 20px;
+  left: 25px;
   top: 85px;
   color: teal;
 }
 
 code {
-  width: 60%;
+  width: 50%;
   padding-left: 20px;
   float: left;
 }
 
 #output {
-  width: 40%;
+  width: 30%;
   float: left;
   text-align: right;
+}
+
+#outer {
+  width: 20%;
+  float: left;
+  position: relative;
 }
 
 .output-var, .output-data {
