--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,17 @@
+.CodeMirror {
+  background: #f5f2f0;
+  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+  padding: 1em;
+  margin: 0.5em 0;
+  line-height: 1.5;
+}
+
+.styled-background {
+  background: red;
+  border-top: 5px red solid;
+  border-bottom: 5px red solid;
+}
+
 #main {
   margin: 20px 50px;
 }
