Playing with webpack

--- a/src/main.less
+++ b/src/main.less
@@ -1,3 +1,7 @@
+body {
+  background: blue;
+}
+
 .CodeMirror {
   background: #f5f2f0;
   font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
@@ -29,9 +33,11 @@
   margin: 7px 5px;
   color: red;
 }
-.language-answer .o {
-  margin: 5px;
-  color: green;
+.language-answer {
+  .o {
+    margin: 5px;
+    color: green;
+  }
 }
 
 
